--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -175,6 +175,57 @@
     }
     
     @media (max-width: 520px) {
+        .match-fore-title {
+            margin-top: 10px;
+        }
+        .match-content {
+            padding: 9px 8px 8px;
+        }
+        .match-under {
+            padding: 0 8px 8px;
+        }
+        .btn-match-end {
+            padding: 0 5px !important;
+        }
+        .img-opacity {
+            display: none;
+        }
+        .card-head.tour .calendar {
+            margin-top: 8px;
+            font-size: 14px;
+        }
+        .match-detail-content .btn {
+            padding: 0 25px;
+        }
+        .match-content {
+            z-index: 1;
+        }
+        .match-detail-content .match-content .club p {
+            font-size: 18px;
+        }
+        .fore-win-lost .equal::before {
+            height: 1px;
+            width: 100%;
+            top: 0;
+        }
+        .fore-win-lost .lost::before {
+            height: 1px;
+            width: 100%;
+            top: 0;
+        }
+        .fore-win-lost span {
+            height: 45px;
+            border-radius: 16px;
+        }
+        .fore-win-lost {
+            width: 105px;
+            flex-direction: column;
+            border-radius: 16px;
+        }
+        .match-detail-content .match-content .club img {
+            width: 45px;
+            height: 45px;
+        }
         .contact-content .contact-form .form {
             padding: 16px;
         }
