--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -394,7 +394,7 @@ body {
 }
 
 
-/* dự đoán tỉ số */
+/* dá»± Ä‘oÃ¡n tá»‰ sá»‘ */
 
 .prediction {
     margin-top: 24px;
@@ -446,6 +446,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: start;
+    width: 35%;
 }
 
 .match-content .club img {
@@ -1132,6 +1133,7 @@ td {
     display: flex;
     align-items: center;
     margin-top: 124px;
+    min-height: calc(100vh - 297px);
 }
 
 .login-slide {
@@ -2619,6 +2621,10 @@ textarea.input-text {
     height: 156px;
 }
 
+.match-detail-content .match-content .club {
+    width: calc((100% - 120px) / 2);
+}
+
 .match-detail-content .match-content .club.club-left .img-opacity {
     top: 60px;
 }
@@ -2647,21 +2653,28 @@ textarea.input-text {
 
 .fore-win-lost {
     display: flex;
-    border-radius: 40px;
+    border-radius: 10px;
     background: #F3F3F3;
+    width: fit-content;
+    position: absolute;
+    top: 0;
+    transform: translateX(-50%);
+    left: 50%;
 }
 
 .fore-win-lost span {
     font-size: 14px;
     font-weight: 400;
-    height: 36px;
-    padding: 0 24px;
+    height: 34px;
+    padding: 0 10px;
     display: flex;
     align-items: center;
     justify-content: center;
     border-radius: 40px;
     position: relative;
     cursor: pointer;
+    margin-bottom: 10px;
+    width: fit-content;
 }
 
 .fore-win-lost span:hover {
@@ -2674,7 +2687,7 @@ textarea.input-text {
     height: 24px;
     width: 1px;
     position: absolute;
-    left: 0;
+    left: -5px;
 }
 
 .fore-win-lost .lost::before {
@@ -2683,7 +2696,7 @@ textarea.input-text {
     height: 24px;
     width: 1px;
     position: absolute;
-    left: 0;
+    left: -5px;
 }
 
 .match-under {
@@ -2697,10 +2710,11 @@ textarea.input-text {
 
 .match-detail-content .btn {
     height: 40px;
-    padding: 0 50px;
+    padding: 0 18px;
     font-size: 16px;
     text-transform: capitalize;
     font-weight: 700;
+    margin: 12px auto;
 }
 
 .match-detail-content .match-content .club img {
@@ -2825,4 +2839,45 @@ textarea.input-text {
     text-align: center;
     font-size: 18px;
     font-weight: 700;
+}
+
+.no-style {
+    text-decoration: none;
+    color: inherit;
+    cursor: auto;
+    /* ThÃªm cÃ¡c thuá»™c tÃ­nh khÃ¡c náº¿u cáº§n thiáº¿t */
+}
+
+span:has(+ input:checked),
+span:has(+ input:checked):hover {
+    background: #0057FF;
+    color: white;
+}
+
+.radio-container {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 0 !important;
+    justify-content: center;
+    width: 100%;
+}
+
+.match-detail-content .match-score-wrapper {
+    position: relative;
+    padding-top: 70px;
+}
+
+.fore-win-lost .win,
+.fore-win-lost .lost {
+    min-width: 100px;
+    /* display: block;
+    display: -webkit-box;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    word-break: break-word;
+    height: auto;
+    line-height: 32px; */
 }
